[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/card_ui.gd" id="1"]

[node name="CardUI" type="PanelContainer"]
custom_minimum_size = Vector2(160, 200)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Card Name"
horizontal_alignment = 1

[node name="ManaLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mana: 3"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MELEE"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HP:100 DMG:20 SPD:3.0"
horizontal_alignment = 1
